package algoblocks.engine;

public class Blank extends Shape {
    public Blank(Coordinates start, Coordinates finish){
        super(start, finish);
    }
}