package algoblocks.engine;

public interface Block {
    public abstract Sequence getSequence();
}