package algoblocks.engine;

public interface Direction {
    public Coordinates move(Coordinates actualCoords);
}
