package algoblocks.engine;

public class Line extends Shape {
    public Line(Coordinates start, Coordinates finish){
        super(start, finish);
    }
}
