@startuml
class Game {

}

class Player {

}

class Coordinates {

}

class Coordinate {

}

class Pencil {

}

interface PencilState {

}

class RaisedPencilState {

}

class LoweredPencilState {

}

class Whiteboard {

}


class Drawing {

}

abstract class Shape{

}

class Line {

}

class Blank {

}

class Workspace {

}

class Algorithm {

}

class Sequence {

}

class Action {

}

abstract class Block {

}

abstract class ActionBlock {

}

abstract class EffectBlock {

}

class MoveUp {

}

class MoveDown {

}

class MoveRight {

}

class MoveLeft {

}

class RaisePencil {

}

class LowerPencil {

}

class Repeat {

}

class Inverse {

}

class CustomBlock {

}


class Grid {

}

class Movement{
    
}

class Direction{

}

class Position{

}

Game "1" o-- "1" Player
Coordinates "1" o-- "2" Coordinate
Player -- Action

Player "1" o-- "1" Pencil
Pencil "1" o-- "1" PencilState
PencilState <|.. RaisedPencilState
PencilState <|.. LoweredPencilState

Game "1" o--left "1" Whiteboard
Whiteboard "1" o-- "1" Drawing
Drawing "1" o-- "*" Shape
Shape "1" o-- "*" Coordinates
Shape <|-- Line
Shape <|-- Blank
Pencil "1" o-- "*" Shape

Game "1" o-- "*" Block
Block <|-- EffectBlock
Block <|-- ActionBlock
Block <|-- CustomBlock

Game "1" o--right "1" Workspace
Workspace "1" o-- "1" Algorithm
Algorithm "1" o-- "*" Block


Workspace "1" o-- "1" Sequence
Sequence "1" o-- "*" Action

ActionBlock <|-- MoveUp
ActionBlock <|-- MoveDown
ActionBlock <|-- MoveRight
ActionBlock <|-- MoveLeft
ActionBlock <|-- LowerPencil
ActionBlock <|-- RaisePencil
Action <..right ActionBlock

EffectBlock <|-- Repeat
EffectBlock <|-- Inverse

Player *-- Movement
Movement o-- Position
Position o-- Grid
Player ..> Direction
Movement *-- Direction
Whiteboard o-- Grid
Coordinates "1" --o "1" Player
Grid o-- Coordinates
Position ..> Coordinates
Movement ..> Coordinates


Algorithm ..> Sequence
EffectBlock ..> Sequence
CustomBlock ..> Sequence
@enduml